--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,16 @@
         android:theme="@style/Theme.TestQuizApp"
         tools:targetApi="31">
         <activity
+            android:name=".QuizQuestionsActivity"
+            android:exported="false"
+            android:theme="@style/NoActionBarThemeFullScreen"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarThemeFullScreen"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
